var_addition_grid_gutter_width

--- a/css/main.scss
+++ b/css/main.scss
@@ -25,6 +25,8 @@ $grey-color-dark:  darken($grey-color, 25%);
 // Width of the content area
 $content-width:    800px;
 
+$grid-gutter-width:	0px;
+
 $on-palm:          600px;
 $on-laptop:        800px;
 
